--- a/newsPaper/templates/posts.html
+++ b/newsPaper/templates/posts.html
@@ -12,10 +12,6 @@ Posts
    <p>
        <a href="/news/search/">Расширенный поиск</a>
    </p>
-   <p>
-        <a href="create/">➕ Создать новость</a>
-        <a href="news/articles/create/" style="margin-left: 20px;">📝 Создать статью</a>
-    </p>
 
    <h3>Всего новостей: {{ posts|length }}</h3>
    <hr>
@@ -36,14 +32,20 @@ Posts
                <td>{{ post.content|censor|truncatewords:20  }}</td>
                <td>{{ post.created_at|date:'d.m.y' }}</td>
                <td>
-                {% if post.post_type == 'NW' %}
-                    <a href="/news/{{ post.id }}/edit/">✏️</a>
-                    <a href="/news/{{ post.id }}/delete/">🗑️</a>
-                {% else %}
-                    <a href="articles/{{ post.id }}/edit/">✏️</a>
-                    <a href="articles/{{ post.id }}/delete/">🗑️</a>
-                {% endif %}
-            </td>
+                    {% if user.is_authenticated %}
+                        {% if user.groups.all.0.name == 'authors' or user.is_superuser %}
+                            {% if post.post_type == 'NW' %}
+                                <a href="/news/{{ post.id }}/edit/">✏️</a>
+                                <a href="/news/{{ post.id }}/delete/">🗑️</a>
+                            {% else %}
+                                <a href="/news/articles/{{ post.id }}/edit/">✏️</a>
+                                <a href="/news/articles/{{ post.id }}/delete/">🗑️</a>
+                            {% endif %}
+                        {% else %}
+                            <span style="color: gray;" title="Только авторы могут редактировать">🔒</span>
+                        {% endif %}
+                    {% endif %}
+                </td>
            </tr>
            {% endfor %}
 
